--- a/raytracer/CMakeLists.txt
+++ b/raytracer/CMakeLists.txt
@@ -3,12 +3,16 @@ include_directories(${CMAKE_CURRENT_LIST_DIR})
 set(raytracer_headers
   raytracer/canvas.h
   raytracer/color.h
+  raytracer/matrix.h
+  raytracer/transform.h
   raytracer/tuple.h
 )
 
 set(raytracer_sources
   raytracer/canvas.cpp
   raytracer/color.cpp
+  raytracer/matrix.cpp
+  raytracer/transform.cpp
   raytracer/tuple.cpp
 )
 
