--- a/raytracer/CMakeLists.txt
+++ b/raytracer/CMakeLists.txt
@@ -3,7 +3,10 @@ include_directories(${CMAKE_CURRENT_LIST_DIR})
 set(raytracer_headers
   raytracer/canvas.h
   raytracer/color.h
+  raytracer/intersection.h
   raytracer/matrix.h
+  raytracer/ray.h
+  raytracer/sphere.h
   raytracer/transform.h
   raytracer/tuple.h
 )
@@ -11,7 +14,10 @@ set(raytracer_headers
 set(raytracer_sources
   raytracer/canvas.cpp
   raytracer/color.cpp
+  raytracer/intersection.cpp
   raytracer/matrix.cpp
+  raytracer/ray.cpp
+  raytracer/sphere.cpp
   raytracer/transform.cpp
   raytracer/tuple.cpp
 )
