Added lighting and shading.

--- a/raytracer/CMakeLists.txt
+++ b/raytracer/CMakeLists.txt
@@ -4,6 +4,8 @@ set(raytracer_headers
   raytracer/canvas.h
   raytracer/color.h
   raytracer/intersection.h
+  raytracer/light.h
+  raytracer/material.h
   raytracer/matrix.h
   raytracer/ray.h
   raytracer/sphere.h
@@ -15,6 +17,8 @@ set(raytracer_sources
   raytracer/canvas.cpp
   raytracer/color.cpp
   raytracer/intersection.cpp
+  raytracer/light.cpp
+  raytracer/material.cpp
   raytracer/matrix.cpp
   raytracer/ray.cpp
   raytracer/sphere.cpp
