--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,8 @@ add_executable(run_tests
   main.cpp
   unit_tests/canvas_tests.cpp
   unit_tests/intersections_tests.cpp
+  unit_tests/lights_tests.cpp
+  unit_tests/materials_tests.cpp
   unit_tests/matrices_tests.cpp
   unit_tests/rays_tests.cpp
   unit_tests/spheres_tests.cpp
