--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,20 @@
 language: cpp
-compiler: gcc
 
-os: linux
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-7
+os: osx
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode10.2
+      env:
+        - MATRIX_EVAL="CC=clang && CXX=clang++"
+
+    - os: osx
+      osx_image: xcode10.2
+      env:
+        - MATRIX_EVAL="brew install gcc && CC=gcc-7 && CXX=g++-7"
+
+before_install:
+    - eval "${MATRIX_EVAL}"
 
 script:
   - export CC=gcc-7
