--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
     - os: osx
       osx_image: xcode10.2
       env:
-        - MATRIX_EVAL="CC=gcc && CXX=g++"
+        - MATRIX_EVAL="brew install gcc@9 && CMAKE_C_COMPILER=gcc-9 && CMAKE_CXX_COMPILER=g++-9"
 
 before_install:
     - eval "${MATRIX_EVAL}"
