--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
     - os: osx
       osx_image: xcode10.2
       env:
-        - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8 && CMAKE_C_COMPILER=gcc-8 && CMAKE_CXX_COMPILER=g++-8"
+        - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
 
 before_install:
     - eval "${MATRIX_EVAL}"
@@ -20,3 +20,4 @@ script:
   - cmake --version
   - cmake CMakeLists.txt
   - cmake  --build . --target run_tests
+  - ./run_tests
